--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -109,13 +109,17 @@ jobs:
       # Step: Setup the database for the tests.
       - name: Setup db
         env:
-          POSTGRES_HOST: localhost
+          POSTGRES_HOSTNAME: localhost
+          POSTGRES_USERNAME: postgres
+          POSTGRES_PASSWORD: postgres
           POSTGRES_PORT: 5432
         run: mix ecto.setup
 
       # Step: Execute the tests.
       - name: Run tests
         env:
-          POSTGRES_HOST: localhost
+          POSTGRES_HOSTNAME: localhost
+          POSTGRES_USERNAME: postgres
+          POSTGRES_PASSWORD: postgres
           POSTGRES_PORT: 5432
         run: mix test
