--- a/.envrc.example
+++ b/.envrc.example
@@ -2,3 +2,4 @@ export POSTGRES_USERNAME=postgres
 export POSTGRES_PASSWORD=postgres
 export POSTGRES_HOSTNAME=localhost
 export SENTRY_DSN=
+export ENV=
