--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -4,9 +4,6 @@ name: Checks
 # Sets the ENV `MIX_ENV` to `test` for running tests
 env:
   MIX_ENV: test
-  # Artificially refresh the cache
-  DEPENDENCIES_CACHE_VERSION: 1
-  PLT_CACHE_VERSION: 1
 
 permissions:
   contents: read
@@ -59,81 +56,9 @@ jobs:
           cache-name: cache-elixir-deps
         with:
           path: deps
-          key: ${{ runner.os }}-mix-${{ env.cache-name }-${{ env.DEPENDENCIES_CACHE_VERSION }}}-${{ hashFiles('**/mix.lock') }}
+          key: ${{ runner.os }}-mix-${{ env.cache-name }}-${{ hashFiles('**/mix.lock') }}
           restore-keys: |
-            ${{ runner.os }}-mix-${{ env.cache-name }}-${{ env.DEPENDENCIES_CACHE_VERSION }}-
-
-      # Step: Define how to cache the `_build` directory. After the first run,
-      # this speeds up tests runs a lot. This includes not re-compiling our
-      # project's downloaded deps every run.
-      - name: Cache compiled build
-        id: cache-build
-        uses: actions/cache@v3
-        env:
-          cache-name: cache-compiled-build
-        with:
-          path: _build
-          key: ${{ runner.os }}-mix-${{ env.cache-name }}-${{ env.DEPENDENCIES_CACHE_VERSION }}-${{ hashFiles('**/mix.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-mix-${{ env.cache-name }}-${{ env.DEPENDENCIES_CACHE_VERSION }}-
-            ${{ runner.os }}-mix-
-
-      # Step: Conditionally bust the cache when job is re-run.  Sometimes, we
-      # may have issues with incremental builds that are fixed by doing a full
-      # recompile. In order to not waste dev time on such trivial issues (while
-      # also reaping the time savings of incremental builds for *most*
-      # day-to-day development), force a full recompile only on builds that are
-      # retried.
-      - name: Clean to rule out incremental build as a source of flakiness
-        if: github.run_attempt != '1'
-        run: |
-          mix deps.clean --all
-          mix clean
-        shell: sh
-
-      # Step: Download project dependencies. If unchanged, uses the cached
-      # version.
-      - name: Install dependencies
-        run: mix deps.get
-
-      # Step: Compile the project treating any warnings as errors.
-      - name: Compiles without warnings
-        run: mix compile --warnings-as-errors
-
-      # Step: Setup the database for the tests.
-      - name: Setup db
-        run: mix ecto.setup
-
-      # Step: Execute the tests.
-      - name: Run tests
-        run: mix test
-
-  ensure_code_consistency:
-    runs-on: ubuntu-latest
-    name: Test on OTP ${{matrix.otp}} / Elixir ${{matrix.elixir}}
-    steps:
-      # Step: Setup Elixir + Erlang image as the base.
-      - name: Set up Elixir
-        uses: erlef/setup-beam@v1
-        with:
-          otp-version: ${{matrix.otp}}
-          elixir-version: ${{matrix.elixir}}
-
-      # Step: Check out the code.
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      # Step: Define how to cache deps. Restores existing cache if present.
-      - name: Cache deps
-        id: cache-deps
-        uses: actions/cache@v3
-        env:
-          cache-name: cache-elixir-deps
-        with:
-          path: deps
-          key: ${{ runner.os }}-mix-${{ env.cache-name }}-${{ env.DEPENDENCIES_CACHE_VERSION }}-${{ hashFiles('**/mix.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-mix-${{ env.cache-name }}-${{ env.DEPENDENCIES_CACHE_VERSION }}-
+            ${{ runner.os }}-mix-${{ env.cache-name }}-
 
       # Step: Define how to cache the `_build` directory. After the first run,
       # this speeds up tests runs a lot. This includes not re-compiling our
@@ -161,7 +86,7 @@ jobs:
         run: |
           mix deps.clean --all
           mix clean
-        shell: s
+        shell: sh
 
       # Step: Download project dependencies. If unchanged, uses the cached
       # version.
@@ -172,47 +97,18 @@ jobs:
       - name: Compiles without warnings
         run: mix compile --warnings-as-errors
 
-      # Step: Check that the code has already been formatted.
+      # Step: Check that the checked in code has already been formatted.
       - name: Check Formatting
         run: mix format --check-formatted
 
-      # Step: Check that the code complies with the credo rules.
+      # Step: Check that the checked in code complies with the credo rules.
       - name: Check Credo
         run: mix credo -A
 
-      # Step: Check that the documentation and specs complies with the doctor rules.
-      - name: Check Doctor
-        run: mix doctor
+      # Step: Setup the database for the tests.
+      - name: Setup db
+        run: mix ecto.setup
 
-      # Don't cache PLTs based on mix.lock hash, as Dialyzer can incrementally update even old ones
-      # Cache key based on Elixir & Erlang version (also useful when running in matrix)
-      - name: Restore PLT cache
-        uses: actions/cache/restore@v4
-        id: plt_cache
-        with:
-          key: |
-            plt-${{ runner.os }}-${{ env.PLT_CACHE_VERSION }}
-          restore-keys: |
-            plt-${{ runner.os }}-${{ env.PLT_CACHE_VERSION }}
-          path: |
-            priv/plts
-
-      # Create PLTs if no cache was found
-      - name: Create PLTs
-        if: steps.plt_cache.outputs.cache-hit != 'true'
-        run: mix dialyzer --plt
-
-      # By default, the GitHub Cache action will only save the cache if all steps in the job succeed,
-      # so we separate the cache restore and save steps in case running dialyzer fails.
-      - name: Save PLT cache
-        uses: actions/cache/save@v4
-        if: steps.plt_cache.outputs.cache-hit != 'true'
-        id: plt_cache_save
-        with:
-          key: |
-            plt-${{ runner.os }}-${{ env.PLT_CACHE_VERSION }}
-          path: |
-            priv/plts
-
-      - name: Run dialyzer
-        run: mix dialyzer --format raw
+      # Step: Execute the tests.
+      - name: Run tests
+        run: mix test
