--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -81,6 +81,39 @@ jobs:
       - name: Check Doctor
         run: mix doctor
 
+      # Don't cache PLTs based on mix.lock hash, as Dialyzer can incrementally update even old ones
+      # Cache key based on Elixir & Erlang version (also useful when running in matrix)
+      - name: Restore PLT cache
+        uses: actions/cache/restore@v4
+        id: plt_cache
+        with:
+          key: |
+            plt-${{ runner.os }}-${{ env.PLT_CACHE_VERSION }}
+          restore-keys: |
+            plt-${{ runner.os }}-${{ env.PLT_CACHE_VERSION }}
+          path: |
+            priv/plts
+
+      # Create PLTs if no cache was found
+      - name: Create PLTs
+        if: steps.plt_cache.outputs.cache-hit != 'true'
+        run: mix dialyzer --plt
+
+      # By default, the GitHub Cache action will only save the cache if all steps in the job succeed,
+      # so we separate the cache restore and save steps in case running dialyzer fails.
+      - name: Save PLT cache
+        uses: actions/cache/save@v4
+        if: steps.plt_cache.outputs.cache-hit != 'true'
+        id: plt_cache_save
+        with:
+          key: |
+            plt-${{ runner.os }}-${{ env.PLT_CACHE_VERSION }}
+          path: |
+            priv/plts
+
+      - name: Run dialyzer
+        run: mix dialyzer
+
   test:
     # Set up a Postgres DB service. By default, Phoenix applications
     # use Postgres. This creates a database for running tests.
